fixed vertical carousel spacing and size

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -32,6 +32,10 @@
   min-height: min(50vw, calc(100dvh - var(--header-height)));
 }
 
+.carousel.vertical .carousel-slide-logo {
+  display: none;
+}
+
 .carousel .carousel-slide:has(.carousel-slide-content[data-align='center']) {
   align-items: center;
 }
@@ -40,8 +44,11 @@
   align-items: flex-end;
 }
 
+.carousel.carousel.vertical .carousel-slide .carousel-slide-image {
+  height: 100%;
+}
+
 .carousel .carousel-slide .carousel-slide-image picture {
-  position: absolute;
   inset: 0;
 }
 
@@ -54,6 +61,7 @@
 .carousel.vertical .carousel-slide .carousel-slide-image picture > img {
   height: 100%;
   width: 100%;
+  aspect-ratio: 2 / 1;
   object-fit: cover;
   object-position: center center;
 }
@@ -359,6 +367,17 @@
   box-sizing: border-box;
 }
 
+ .carousel.vertical {
+  height: 100%;
+}
+
+.carousel.vertical .carousel-slides-container {
+   position: relative;
+   height: 50vw;
+   max-height: 640px;
+   overflow: hidden;
+}
+
 @media (width < 600px) {
   .carousel.vertical .carousel-slide-indicators {
      display: none;
@@ -410,25 +429,12 @@
   }
 }
 
- /* Vertical Carousel */
-
- .carousel.vertical {
-  height: 300px;
-  margin-bottom: 40px;
-}
-
    /* Reset padding for all vertical carousel variants */
    .carousel.vertical.hero-banner,
    .carousel.vertical.scrollable {
- padding: unset;
- margin: unset;
-}
-
-.carousel.vertical .carousel-slides-container {
-   position: relative;
-   height: 100%;
-   overflow: hidden;
-}
+  padding: unset;
+  margin: unset;
+  }
 
 .carousel-container .carousel.hero-banner .carousel-slides-container {
   height: 100vh;
@@ -459,6 +465,8 @@
   display: block;
   flex: none ;
   scroll-snap-align: unset ;
+  padding: 0;
+  margin: 0;
 }
 
 .carousel.vertical .carousel-slide[aria-hidden="false"] {
@@ -481,32 +489,24 @@
   opacity: 1;
 }
 
-
-@media (width >= 600px) and (width <=900px) {
-  .carousel.vertical {
-    height: 400px;
-  }
-}
-
 @media (width >= 900px) {
   .carousel-container .carousel.hero-banner.homepage:not(.scrollable) {
     margin-top: calc(-1 * var(--header-tab-height));
   }
 
   .carousel.vertical {
-    height: 500px;
     margin-top: 0;
     margin-bottom: 0;
+  }
+
+  .carousel.vertical .carousel-slides-container {
+    height: calc((50vw) - 100px);
   }
 }
 
 @media (width >= 1200px) {
   .carousel-container .carousel.hero-banner.homepage:not(.scrollable) {
     margin-top: calc(-1 * var(--header-height));
-  }
-
-  .carousel.vertical {
-    height: 600px;
   }
 }
 
