--- a/templates/news-article/news-article.css
+++ b/templates/news-article/news-article.css
@@ -18,9 +18,6 @@ body.biencommun main .section.details-sidebar h1 {
     color: var(--site-color-bien);
 }
 
-body.news-article main .carousel-wrapper {
-    padding-top: 30px;
-}
 
 body.news-article main .section.white-smoke-bg {
     background-color: var(--news-bg-page);
@@ -55,6 +52,28 @@ body.news-article main .section.articleintro-container + div .default-content-wr
     letter-spacing: .02em;
     font-weight: 400;
 }
+
+body.news-article .articlecontent-container {
+    background-color: var(--news-bg-page-suite);
+    margin: 0 auto;
+}
+
+body.news-article .articlecontent-container .carousel-container.section {
+    top: 40px;
+    position: relative;
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 1440px;
+    box-sizing: border-box;
+}
+
+body.news-article main .articlecontent-container .section.details-sidebar {
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 1440px;
+    box-sizing: border-box;
+    margin-top: 80px;
+}  
 
 body.news-article main .section.details-sidebar.light-grey-bg + * {
     background-color: var(--news-bg-page-suite);
@@ -285,12 +304,13 @@ body.news-article main .section.details-sidebar.right .news-article-inner .defau
 }
 
 @media (width >= 600px) {
-    main .section.details-sidebar h1 { 
-        font-size: 50px;
+    body.news-article .articlecontent-container {
+        background-color: var(--news-bg-page-suite);
+        margin: 300px auto 0;
     }
 
-    body.news-article main .carousel-wrapper {
-        padding-top: 100px;
+    main .section.details-sidebar h1 { 
+        font-size: 50px;
     }
 
     body.news-article main .section.details-sidebar .news-article-sidebar {
@@ -346,6 +366,14 @@ body.news-article main .section.details-sidebar.right .news-article-inner .defau
     body.news-article main .section.details-sidebar.right .news-article-inner .default-content-wrapper p:nth-child(1) strong {
         font-size: 20px;
     }
+
+    body.news-article .articlecontent-container .carousel-container.section {
+        top: -200px;
+    }
+
+    body.news-article main .articlecontent-container .section.details-sidebar {
+        margin-top: -150px;
+   }
 }
 
 @media (width >= 900px) {
@@ -353,6 +381,11 @@ body.news-article main .section.details-sidebar.right .news-article-inner .defau
         font-size: 40px;
         max-width: 48%;
         top: unset;
+    }
+
+    body.news-article .articlecontent-container .carousel-container.section, 
+    body.news-article main .articlecontent-container .section.details-sidebar {
+        padding: 0 80px;
     }
 
     body.news-article main .section.articlecontent-container + div div.default-content-wrapper {
